<resources>
    <!--    Common    -->
    <string name="btn_label_confirm">확인</string>
    <string name="btn_label_cancel">취소</string>
    <string name="description_payment_success_image">결제수단 등록 성공을 알리는 이미지</string>
    <string name="format_amount_unit">%s원</string>
    <string name="format_transfer_account">"%1$s %2$s"</string>


    <!--    Home    -->
    <string name="app_name">연습페이</string>
    <string name="label_home_screen">홈</string>
    <string name="label_transfer_screen">송금</string>
    <string name="label_add_card">결제 수단을 등록해주세요</string>
    <string name="btn_label_payment">결제하기</string>
    <string name="label_transfer_history">송금내역</string>


    <!--    Transfer Account   -->
    <string name="appbar_title_transfer_screen">누구에게 보낼까요?</string>
    <string name="description_add_card">카드 추가를 안내하는 이미지</string>

    <!--    Transfer   -->
    <string name="appbar_title_transfer">얼마를 보낼까요?</string>


    <!--  Transfer confirm dialog  -->
    <string name="format_transfer_info">"%1$s에게 %2$s원을\n이체하시겠습니까?"</string>
    <string name="btn_transfer_confirm">"이체하기"</string>

    <!--    Transfer result  -->
    <string name="format_confirm_info">"%1$s의 계좌로\n%2$s원을 이체했어요."</string>
    <string name="guide_transfer_failure_message">계좌이체에 실패했어요.</string>

    <!--   Payment Method    -->
    <string name="appbar_title_payment_method_screen">결제 수단 등록</string>
    <string name="description_account_profile_image">송금할 계좌의 프로필 이미지</string>
    <string name="label_payment_card_number">카드번호</string>
    <string name="hint_input_card_number">Card Number</string>
    <string name="label_valid_date">유효기간</string>
    <string name="hint_input_valid_date">MM / YY</string>
    <string name="label_password">비밀번호 앞 2자리</string>
    <string name="hint_input_password">●●</string>
    <string name="label_card_name">카드이름</string>
    <string name="hint_input_card_name">카드 이름 입력</string>

    <!--   Payment Registration    -->
    <string name="guide_payment_success_message">결제 수단이 정상적으로\n등록 되었어요</string>
    <string name="guide_payment_failure_message">오류가 발생하였습니다.\n 결제 수단 등록을 다시 해주세요.</string>
    <string name="btn_label_retry">재시도</string>
    <string name="label_transfer_amount">보낼 금액</string>
    <string name="label_number_1">1</string>
    <string name="label_number_2">2</string>
    <string name="label_number_3">3</string>
    <string name="label_number_4">4</string>
    <string name="label_number_5">5</string>
    <string name="label_number_6">6</string>
    <string name="label_number_7">7</string>
    <string name="label_number_8">8</string>
    <string name="label_number_9">9</string>
    <string name="label_number_two_zeros">00</string>
    <string name="label_number_zero">0</string>
    <string name="description_confirm_dialog_image">송금 앱 로고</string>
    <string name="guide_message_empty_transfer_history">아직 거래 내역이 없어요</string>

    <!--  Transfer Detail  -->
    <string name="appbar_title_transfer_title">이체 상세 내역</string>
    <string name="label_transfer_receiver">받는분</string>
    <string name="label_transfer_type">거래 유형</string>
    <string name="label_transfer_date">일시</string>
    <string name="label_transfer_balance">거래 후 잔액</string>
    <string name="label_transfer_account">입금 계좌</string>
    <string name="label_withdraw">출금</string>


</resources>