<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_transfer_detail"
        style="@style/AppToolbar.Navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/appbar_title_transfer_title" />


    <TextView
        android:id="@+id/tv_detail_holder_name"
        style="@style/AppTextBody.S14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_transfer_detail"
        tools:text="정지석" />

    <TextView
        android:id="@+id/tv_detail_amount"
        style="@style/AppTextTitle.S24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_holder_name"
        app:layout_constraintStart_toStartOf="@id/tv_detail_holder_name"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_holder_name"
        tools:text="10,000원" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_transfer_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:dividerColor="@color/gray_50"
        app:dividerInsetEnd="16dp"
        app:dividerInsetStart="16dp"
        app:dividerThickness="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_amount" />

    <com.stopstone.payapp.ui.views.HorizontalTextLayout
        android:id="@+id/view_transfer_receiver"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_transfer_detail"
        app:textLabel="@string/label_transfer_receiver" />

    <com.stopstone.payapp.ui.views.HorizontalTextLayout
        android:id="@+id/view_transfer_type"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_transfer_receiver"
        app:textLabel="@string/label_transfer_type" />

    <com.stopstone.payapp.ui.views.HorizontalTextLayout
        android:id="@+id/view_transfer_date"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_transfer_type"
        app:textLabel="@string/label_transfer_date" />

    <com.stopstone.payapp.ui.views.HorizontalTextLayout
        android:id="@+id/view_transfer_balance"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_transfer_date"
        app:textLabel="@string/label_transfer_balance" />

    <com.stopstone.payapp.ui.views.HorizontalTextLayout
        android:id="@+id/view_transfer_account"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_transfer_balance"
        app:textLabel="@string/label_transfer_account" />
</androidx.constraintlayout.widget.ConstraintLayout>